Fri Jul 11 00:36:00 BST 2003  Olly Betts <olly@survex.com>

	* common/getopt.h: Removed space between \ and newline.

Fri Jul 11 00:32:40 BST 2003  Olly Betts <olly@survex.com>

	* PLATFORMS: Added MacOS X 10.2 success report.

Thu Jul 10 20:05:58 BST 2003  Olly Betts <olly@survex.com>

	* common/getopt.h: Fixed to work better with C++ compilers on
	  non-glibc platforms.

Thu Jul 10 19:21:00 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Modified setting of _XOPEN_SOURCE to
	  actually work!

Thu Jul 10 19:19:30 BST 2003  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc: Defined _XOPEN_SOURCE=500 for GLIBC
	  so we get pread() and pwrite().

Thu Jul 10 00:28:25 BST 2003  Olly Betts <olly@survex.com>

	* HACKING,Makefile.am,configure.in,bindings/.cvsignore,
	  bindings/Makefile.am,bindings/dir_contents,bindings/guile/.cvsignore,
	  bindings/guile/Makefile.am,bindings/php4/.cvsignore,
	  bindings/php4/ABOUT,bindings/php4/Makefile.am,bindings/python/,
	  bindings/swig/,bindings/tcl8/.cvsignore,bindings/tcl8/Makefile.am,
	  docs/todo.xml: Removed bindings - they'll shortly reappear in a
	  separate module named xapian-bindings.

Thu Jul 10 00:03:04 BST 2003  Olly Betts <olly@survex.com>

	* bindings/swig/om_util_perl5.i: Removed.

Wed Jul 09 15:35:56 BST 2003  Olly Betts <olly@survex.com>

	* bindings/guile/Makefile.am,bindings/php4/Makefile.am,
	  bindings/python/Makefile.am,bindings/swig/,
	  bindings/tcl8/Makefile.am: Removed omtypes.i and merged omstem.i
	  into xapian.i; added forward declaration for upwrapped classes
	  to xapian.i.

Wed Jul 09 15:34:11 BST 2003  Olly Betts <olly@survex.com>

	* bindings/java/,bindings/java/com/muscat/om/,bindings/java/native/:
	  Removed old Java bindings - we'll do them using SWIG instead.

Wed Jul 09 14:51:51 BST 2003  Olly Betts <olly@survex.com>

	* bindings/php4/Makefile.am,bindings/php4/xapian/.cvsignore: More
	  work on the php4 bindings.
